# Task-Management-System

./: ai_task_management_system.py  duration_predictor_model.pkl  duration_scaler.pkl  feature_scaler.pkl  label_encoders.pkl  main.py  priority_predictor_model.pkl  pyproject.toml  task_classifier_model.pkl  task_forecast_model.pkl  task_project.ipynb  tfidf_vectorizer.pkl  users.csv
static/js/: script.js
templates/: index.html
