[project]
name = "internship"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "prophet>=1.1.7",
    "seaborn>=0.13.2",
    "imbalanced-learn>=0.11.0",
    "scikit-learn==1.3.2",
    "xgboost>=3.0.2",
]
